Small code cleanup (.get(0) -> .getFirst())